--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5",
-        "doctrine/doctrine-orm-module": "^0.10.0"
+        "doctrine/doctrine-orm-module": "^0.10.0",
+        "zendframework/zend-developer-tools": "dev-master"
     }
 }
